--- a/inputs/first_paper/optimiser/heterogeneous.yaml
+++ b/inputs/first_paper/optimiser/heterogeneous.yaml
@@ -1,10 +1,10 @@
 Abstract 2 Populations:
   biologyInitializer:
-    Diffusing Logistic:
-      carryingCapacity: '5000.0'
+    From Left To Right Logistic:
+      carryingCapacity: '10000.0'
       differentialPercentageToMove: '0.001'
       percentageLimitOnDailyMovement: '0.01'
-      steepness: uniform 0.6 0.8
+      steepness: 0.7
   departingStrategyLarge:
     Fixed Rest:
       hoursBetweenEachDeparture: '12.0'
@@ -49,10 +49,10 @@ Abstract 2 Populations:
   fishingStrategy:
     Until Full With Day Limit:
       daysAtSea: '5.0'
-  gasPricePerLiter: '0.01'
+  gasPricePerLiter: '0.0'
   gearLarge:
     Random Catchability:
-      gasPerHourFished: '5.0'
+      gasPerHourFished: '0.0'
       meanCatchabilityFirstSpecies: '0.1'
       meanCatchabilityOtherSpecies: '0.1'
       standardDeviationCatchabilityFirstSpecies: '0.0'
@@ -73,7 +73,7 @@ Abstract 2 Populations:
   largeSpeed: '5.0'
   mapInitializer:
     Simple Map:
-      cellSizeInKilometers: '10.0'
+      cellSizeInKilometers: '2.0'
       coastalRoughness: '0.0'
       depthSmoothing: '1000000.0'
       height: '50.0'
@@ -97,7 +97,7 @@ Abstract 2 Populations:
   regulationSmall: Anarchy
   separateRegulations: true
   smallFishers: 50
-  smallFuelTankSize: '5000.0'
+  smallFuelTankSize: '500.0'
   smallHoldSize: '10.0'
   smallLitersPerKilometer: '10.0'
   smallSpeed: '5.0'
