--- a/build.gradle
+++ b/build.gradle
@@ -54,6 +54,10 @@ dependencies
     compile "org.metawidget.modules:metawidget-all:4.1"
     compile "commons-beanutils:commons-beanutils:1.8.3"
 
+    //csv helper
+    compile "com.opencsv:opencsv:3.8"
+
+
     //logger:
     compile "com.esotericsoftware:minlog:1.3.0"
     //serializer
