Nice day of refactoring. Not much to show for it but I think it's the nicest way to introduce different growth functions for the simple (non-abundance) biology layers

--- a/inputs/YAML Samples/components/AdaptationProbability.yaml
+++ b/inputs/YAML Samples/components/AdaptationProbability.yaml
@@ -14,3 +14,9 @@ Adaptive Probability:
   imitationProbability: '1.0'
   incrementMultiplier: '0.02'
 -------
+Social Annealing Probability:
+  multiplier: '1.0'
+-------
+Profit Threshold Probability:
+  threshold: '1.0'
+-------
