--- a/inputs/first_paper/sensitivity/hardswitch/large_difference.yaml
+++ b/inputs/first_paper/sensitivity/hardswitch/large_difference.yaml
@@ -5,7 +5,9 @@ Abstract:
       differentialPercentageToMove: '0.2'
       firstSpeciesCapacity: '20000.0'
       percentageLimitOnDailyMovement: '1'
-      steepness: 0.7
+      grower:
+          Independent Logistic Grower:
+              steepness: 0.7
   departingStrategy:
     Fixed Rest:
       hoursBetweenEachDeparture: '12.0'
