--- a/inputs/first_paper/sensitivity/fronts/fronts_worst.yaml
+++ b/inputs/first_paper/sensitivity/fronts/fronts_worst.yaml
@@ -4,7 +4,9 @@ Abstract:
       carryingCapacity: '20000.0'
       differentialPercentageToMove: '0.018204'
       percentageLimitOnDailyMovement: '0.1'
-      steepness: 0.7
+      grower:
+          Independent Logistic Grower:
+              steepness: 0.7
   departingStrategy:
     Fixed Rest:
       hoursBetweenEachDeparture: '12.0'
