--- a/inputs/first_paper/sensitivity/gear_itq/gear_itq_worse.yaml
+++ b/inputs/first_paper/sensitivity/gear_itq/gear_itq_worse.yaml
@@ -5,7 +5,9 @@ Abstract:
       differentialPercentageToMove: '1'
       firstSpeciesCapacity: '20000.0'
       percentageLimitOnDailyMovement: '0.07'
-      steepness: 0.7
+      grower:
+          Independent Logistic Grower:
+              steepness: 0.7
   departingStrategy:
     Fixed Rest:
       hoursBetweenEachDeparture: '12.0'
