Added fake species to keep track of all catches that aren't simulated in California (and potentially OSMOSE) and a gear that catches it.

--- a/inputs/YAML Samples/components/DirectedGraph.yaml
+++ b/inputs/YAML Samples/components/DirectedGraph.yaml
@@ -5,5 +5,7 @@ Barabasi-Albert:
   parallelFriendshipsAllowed: true
 -------
 Equal Out Degree:
-  degree: 2
+  allowMutualFriendships: true
+  degree: '2.0'
+  equalOutDegree: true
 -------
