--- a/inputs/YAML Samples/components/GeographicalRegression.yaml
+++ b/inputs/YAML Samples/components/GeographicalRegression.yaml
@@ -67,6 +67,8 @@ Kernel Regression:
   xBandwidth: '250.0'
   yBandwidth: '250.0'
 -------
+RBF Network
+-------
 Social Tuning:
   nested:
     Complete Nearest Neighbor:
