--- a/inputs/YAML Samples/scenario/Abstract.yaml
+++ b/inputs/YAML Samples/scenario/Abstract.yaml
@@ -48,12 +48,14 @@ Abstract:
   habitatInitializer: All Sand
   holdSize: '100.0'
   literPerKilometer: '10.0'
+  logbook: No Logbook
   mapInitializer:
     Simple Map:
       cellSizeInKilometers: '10.0'
       coastalRoughness: '4.0'
       depthSmoothing: '1000000.0'
       height: '50.0'
+      maxLandWidth: '10.0'
       width: '50.0'
   mapMakerDedicatedRandomSeed: null
   market:
@@ -61,7 +63,9 @@ Abstract:
       marketPrice: '10.0'
   networkBuilder:
     Equal Out Degree:
-      degree: 2
+      allowMutualFriendships: true
+      degree: '2.0'
+      equalOutDegree: true
   portPositionX: -1
   portPositionY: -1
   ports: 1
