--- a/inputs/YAML Samples/components/DestinationStrategy.yaml
+++ b/inputs/YAML Samples/components/DestinationStrategy.yaml
@@ -56,7 +56,7 @@ SNALSAR:
   profit:
     Remembered Profits:
       includeOpportunityCosts: true
-  safety: Socially Acceptable Everywhere
+  safety: Safe Everywhere
   sociallyAcceptable: Nobody Fishes Here
 -------
 Heatmap Based:
@@ -119,4 +119,26 @@ Florida Longliner:
   centroidFile: /home/carrknight/code/oxfish/temp_wfs/areas.txt
   coefficientsFile: /home/carrknight/code/oxfish/temp_wfs/longline.csv
   coefficientsStandardDeviationFile: /home/carrknight/code/oxfish/temp_wfs/longline_std.csv
+-------
+Perfect RPUE Logit:
+  discretizer: Identity Discretization
+-------
+Replicator:
+  inertia: '0.8'
+  options:
+  - Discretized Bandit:
+      average:
+        Exponential Moving Average:
+          alpha: '0.2'
+      bandit:
+        Epsilon Greedy Bandit:
+          explorationRate: '0.2'
+      discretizer:
+        Squared Discretization:
+          horizontalSplits: '2.0'
+          verticalSplits: '2.0'
+  - GSA:
+      explorationSize: '20.0'
+      gravitationalConstant: '100.0'
+      initialSpeed: '0.0'
 -------
