--- a/inputs/YAML Samples/scenario/Abstract 2 Populations.yaml
+++ b/inputs/YAML Samples/scenario/Abstract 2 Populations.yaml
@@ -81,6 +81,7 @@ Abstract 2 Populations:
       coastalRoughness: '4.0'
       depthSmoothing: '1000000.0'
       height: '50.0'
+      maxLandWidth: '10.0'
       width: '50.0'
   mapMakerDedicatedRandomSeed: null
   market:
@@ -88,7 +89,9 @@ Abstract 2 Populations:
       marketPrice: '10.0'
   networkBuilder:
     Equal Out Degree:
-      degree: 2
+      allowMutualFriendships: true
+      degree: '2.0'
+      equalOutDegree: true
   ports:
     Random Ports:
       numberOfPorts: '1.0'
