Small modification to avoid unnecessary imitation (copy somebody who's doing what you are already doing anyway)

--- a/inputs/YAML Samples/components/DestinationStrategy.yaml
+++ b/inputs/YAML Samples/components/DestinationStrategy.yaml
@@ -122,6 +122,7 @@ Florida Longliner:
 -------
 Perfect RPUE Logit:
   discretizer: Identity Discretization
+  profitBeta: '1.0'
 -------
 Replicator:
   inertia: '0.8'
