Created a multiple regulation object; not very proud of the amount of hacks I had to pull but I am on a very tight schedule. After cleaning it I really want to replace the way regulations in the two population scenarios are instantiated with this multiple regulation object

--- a/inputs/YAML Samples/components/Regulation.yaml
+++ b/inputs/YAML Samples/components/Regulation.yaml
@@ -13,6 +13,7 @@ MPA Chromosome:
 -------
 MPA with fine:
   beingCaughtProbability: 1,.2
+  canContemplateCheating: false
   hourlyFines: '100,2000'
   mpas:
   - height: 5
@@ -84,4 +85,15 @@ Single Species PID Taxation:
 -------
 Open/Close Shodan from File:
   pathToXml: /home/carrknight/code/oxfish/inputs/biomassQ.xml
+-------
+Multiple Regulations:
+  factories:
+  - Mono-ITQ:
+      individualQuota: '2500.0'
+  - MPA Only:
+      startingMPAs: [
+        ]
+  tags:
+  - all
+  - all
 -------
