Big refactor to coalesce together abundance catches and biomass catches into one interface. Will be useful later on when also Hold gets modified. It is also important for discarding strategies which are now implemented but not tested nor integrated

--- a/build.gradle
+++ b/build.gradle
@@ -82,9 +82,11 @@ dependencies
     //commons math
     compile group: 'org.apache.commons', name: 'commons-math3', version: '3.2'
 
-    //burlap!
+    //burlap : Reinforcement Learning helper
     compile group: 'edu.brown.cs.burlap', name: 'burlap', version: '3.0.1'
 
+    //annotations
+    compile group: 'com.intellij', name: 'annotations', version: '12.0'
 
     //testing:
     testCompile "junit:junit:4.12"
