another ugly hack but now I simulate also red snapper juvenile mortality due to shrimp bycatch

--- a/inputs/YAML Samples/components/Gear.yaml
+++ b/inputs/YAML Samples/components/Gear.yaml
@@ -73,3 +73,8 @@ Garbage Gear:
   garbageSpeciesName: Others
   proportionSimulatedToGarbage: '0.3'
 -------
+Hold Upper Limit:
+  delegate:
+    Fixed Proportion:
+      catchabilityPerHour: '0.01'
+-------
