--- a/inputs/YAML Samples/components/DestinationStrategy.yaml
+++ b/inputs/YAML Samples/components/DestinationStrategy.yaml
@@ -56,7 +56,7 @@ SNALSAR:
   profit:
     Remembered Profits:
       includeOpportunityCosts: true
-  safety: Socially Acceptable Everywhere
+  safety: Ignore Rules
   sociallyAcceptable: Nobody Fishes Here
 -------
 Heatmap Based:
@@ -116,9 +116,9 @@ Discretized Bandit:
       verticalSplits: '2.0'
 -------
 Florida Longliner:
-  centroidFile: /home/carrknight/code/oxfish/temp_wfs/areas.txt
-  coefficientsFile: /home/carrknight/code/oxfish/temp_wfs/longline.csv
-  coefficientsStandardDeviationFile: /home/carrknight/code/oxfish/temp_wfs/longline_std.csv
+  centroidFile: temp_wfs/areas.txt
+  coefficientsFile: temp_wfs/longline.csv
+  coefficientsStandardDeviationFile: temp_wfs/longline_dummy.csv
 -------
 Florida Bare Bones:
   discretizer:
