Made map itq initializer also vary over quota traded per species (this for Yelloweye that is just too scarce to be traded in blocks of 100kg)

--- a/inputs/YAML Samples/components/DestinationStrategy.yaml
+++ b/inputs/YAML Samples/components/DestinationStrategy.yaml
@@ -15,6 +15,7 @@ Per Trip Iterative:
 -------
 Imitator-Explorator:
   alwaysCopyBest: true
+  automaticallyIgnoreAreasWhereFishNeverGrows: false
   automaticallyIgnoreMPAs: false
   backtracksOnBadExploration: true
   dropInUtilityNeededForUnfriend: '-1.0'
